Disable footer jump link from mobile. Styles fix

--- a/src/index.css
+++ b/src/index.css
@@ -31,9 +31,9 @@ code {
 
 .sr-only {
   position: absolute;
-  width: 1;
-  height: 1;
-  margin: -1;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
   padding: 0;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
